--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular": "1.6.2",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
-    "howler.js": "howler#^2.0.3"
+    "howler.js": "howler#^2.0.3",
+    "video.js": "^5.18.4"
   }
 }
